Bumped the min-width for title columns up to 200px.  150px wasn't quite enough to prevent the cancel button from wrapping to the next line.

--- a/source/css/screen.css
+++ b/source/css/screen.css
@@ -118,7 +118,7 @@ thead th.big {
   text-align: left;
 }
 thead th.title {
-  min-width: 150px;
+  min-width: 200px;
 }
 tbody {
   background: white;
